- filter shipments by employee